--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,8 @@
 langchain
-python-dotenv~=1.0.0
-httpx~=0.24.1
-supabase~=1.2.0
-aiohttp~=3.8.5
-requests~=2.31.0
-ccxt~=4.1.6
-pydantic~=1.10.13
-pytest~=7.4.2
-
-tenacity~=8.2.3
-
-numpy~=1.26.0
-PyYAML~=6.0.1
-pandas~=2.1.1
-uvicorn~=0.22.0
+python-dotenv
+supabase
+aiohttp
+ccxt
 fastapi
-openai~=0.27.10
-docarray~=0.21.1
-duckdb~=0.9.0
-
-typer~=0.9.0
-deprecation~=2.1.0
-urllib3~=1.26.17
-packaging~=23.2
-jsonpatch~=1.33
-anyio~=3.7.1
-cohere~=4.27
-tiktoken~=0.4.0
-chromadb~=0.3.26
-pymongo~=4.5.0
-pypdf~=3.16.2
-sympy~=1.12
-regex~=2023.10.3
-transformers~=4.33.3
-gymnasium~=0.29.1
-easydict~=1.10
-tqdm~=4.66.1
-pytz~=2023.3.post1
-beautifulsoup4~=4.12.2
-APScheduler~=3.10.4
-websockets~=10.4
-realtime~=1.0.0
-websocket-client~=1.6.3
-starlette~=0.27.0
-
+tqdm
 appwrite
